--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -95,6 +95,7 @@
         <File Name="../../../../tests/unit/testmodule_system/QPath_Test.cpp"/>
       </VirtualDirectory>
       <File Name="../../../../tests/unit/testmodule_system/QBinaryStreamWriter_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QTextStreamReader_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="DataTypes">
       <File Name="../../../../tests/unit/testmodule_system/QDerivedFromObject.cpp"/>
