--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -311,6 +311,8 @@
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineSystem.dylib" "$(EXECUTION_PATH)."</Command>
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/TestConfig.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">if test -d "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)/artifacts/"; then rm -rf "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)/artifacts/"; fi</Command>
+        <Command Enabled="yes">rsync -a --exclude='.*' $(EXECUTION_PATH)../../../../bin/artifacts/artifacts $(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)</Command>
       </PreBuild>
       <PostBuild>
         <Command Enabled="yes">rm *.dylib</Command>
@@ -371,6 +373,8 @@
         <Command Enabled="yes">mkdir -p $(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)</Command>
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/TestConfig.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">if test -d "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)/artifacts/"; then rm -rf "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)/artifacts/"; fi</Command>
+        <Command Enabled="yes">rsync -a --exclude='.*' $(EXECUTION_PATH)../../../../bin/artifacts/artifacts $(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)</Command>
       </PreBuild>
       <PostBuild>
         <Command Enabled="yes"/>
