--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -90,6 +90,7 @@
     <File Name="../../../../headers/SQInternalLogger.h"/>
     <File Name="../../../../headers/EQAssertionType.h"/>
     <File Name="../../../../headers/QReferenceWrapper.h"/>
+    <File Name="../../../../headers/Endianness.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="DataTypes">
     <File Name="../../../../headers/CrossPlatformBasicTypes.h"/>
