--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -394,4 +394,8 @@
       </Completion>
     </Configuration>
   </Settings>
+  <VirtualDirectory Name="Exceptions">
+    <File Name="../../../../headers/QAssertException.h"/>
+    <File Name="../../../../source/QAssertException.cpp"/>
+  </VirtualDirectory>
 </CodeLite_Project>
