666 - SQKeyValuePairComparator Done. Added an overload of QKeyValuePair::GetKey for constant instances.

--- a/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
@@ -195,6 +195,7 @@
     <File Name="../../../../headers/QBinarySearchTree.h"/>
     <File Name="../../../../headers/SQComparatorDefault.h"/>
     <File Name="../../../../headers/QKeyValuePair.h"/>
+    <File Name="../../../../headers/SQKeyValuePairComparator.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Time">
     <File Name="../../../../headers/QDateTime.h"/>
