587 - QFile Done. It's pending to work on Mac and update makefiles.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -128,6 +128,8 @@
       <File Name="../../../../source/QFileInfo.cpp"/>
       <File Name="../../../../headers/QDirectoryInfo.h"/>
       <File Name="../../../../source/QDirectoryInfo.cpp"/>
+      <File Name="../../../../headers/SQFile.h"/>
+      <File Name="../../../../source/SQFile.cpp"/>
       <File Name="../../../../headers/EQFileSystemError.h"/>
       <File Name="../../../../headers/SQDirectory.h"/>
       <File Name="../../../../source/SQDirectory.cpp"/>
