--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -94,6 +94,7 @@
       <VirtualDirectory Name="FileSystem">
         <File Name="../../../../tests/unit/testmodule_system/QPath_Test.cpp"/>
         <File Name="../../../../tests/unit/testmodule_system/SQDirectory_Test.cpp"/>
+        <File Name="../../../../tests/unit/testmodule_system/SQFile_Test.cpp"/>
       </VirtualDirectory>
       <File Name="../../../../tests/unit/testmodule_system/QBinaryStreamWriter_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QTextStreamReader_Test.cpp"/>
