--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="..\..\..\..\headers\QUri.h" />
     <ClInclude Include="..\..\..\..\headers\RTTIDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\SQAnyTypeToStringConverter.h" />
+    <ClInclude Include="..\..\..\..\headers\SQFile.h" />
     <ClInclude Include="..\..\..\..\headers\SQTypeExtensions.h" />
     <ClInclude Include="..\..\..\..\headers\SystemDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\Workarounds\WinBase_Workarounds.h" />
@@ -199,6 +200,7 @@
     <ClCompile Include="..\..\..\..\source\QThread.cpp" />
     <ClCompile Include="..\..\..\..\source\SQAnyTypeToStringConverter.cpp" />
     <ClCompile Include="..\..\..\..\source\QUri.cpp" />
+    <ClCompile Include="..\..\..\..\source\SQFile.cpp" />
     <ClCompile Include="..\..\..\..\source\SQTypeExtensions.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
